--- a/rainhadasucata/src/main/webapp/resources/sass/clientes.scss
+++ b/rainhadasucata/src/main/webapp/resources/sass/clientes.scss
@@ -9,5 +9,5 @@ and open the template in the editor.
 */
 @import "comum/_mixins.scss";
 @import "comum/_reset.scss";
-
+@import "comum/_main.scss";
 /*Programar o css Aqui!!*/
